<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first"
    tools:context=".ui.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="@color/first"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:contentDescription="@string/button_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/setting"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.Toolbar>

    <Switch
        android:id="@+id/switch_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:text="@string/alarm"
        android:textSize="13sp"
        android:fontFamily="@font/poppins_regular"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/txtLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/background"
        android:padding="16dp"
        android:text="@string/change_language"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_alarm" />

    <ImageButton
        android:id="@+id/btn_setting_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@color/second"
        android:src="@drawable/ic_baseline_language_24"
        app:layout_constraintBottom_toBottomOf="@+id/txtLang"
        app:layout_constraintEnd_toEndOf="@+id/txtLang"
        app:layout_constraintTop_toTopOf="@+id/txtLang"
        android:contentDescription="@string/button_language" />


</androidx.constraintlayout.widget.ConstraintLayout>