<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/second"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/githublogo"
                android:contentDescription="@string/logo"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/github_logo"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/img_logo"
                app:layout_constraintStart_toEndOf="@+id/img_logo"
                app:layout_constraintTop_toTopOf="@+id/img_logo" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:inputType="text"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_search"
                android:hint="@string/who_are_you_looking_for"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_search"
                app:layout_constraintTop_toBottomOf="@+id/img_logo"
                android:importantForAutofill="no"
                android:imeOptions="actionSearch"
                android:singleLine="true"/>

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:background="@drawable/background_button"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edt_search"
                app:layout_constraintTop_toTopOf="@+id/edt_search"
                android:imeOptions="actionDone"
                android:contentDescription="@string/button_search"/>

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/second"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/button_setting"/>

            <ImageButton
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@color/second"
                android:contentDescription="@string/button_setting"
                android:src="@drawable/ic_baseline_favorite_24"
                app:layout_constraintEnd_toStartOf="@id/btn_setting"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>